index.css
:root {
  --text-color: #abb2bf;
  --max-content-width-mobile: 90vw;
  --max-img-iframe-width-mobile: 75vw;
  --max-content-width-desktop: 580px;
  --max-img-iframe-width-desktop: 500px;
  --margin: 1rem;
}

body {
  background-color: #282a36;
  color: var(--text-color);
  font-family: "Segoe UI";
  max-width: var(--max-content-width-mobile);
  padding-bottom: 30px;
  padding-left: var(--margin);
}

p,
ul,
ol,
blockquote {
  text-align: justify;
}

.indented-paragraph {
  margin-left: 2rem;
}

.quote-author {
  text-align: right;
  padding-left: 30vw;
}

li {
  margin-bottom: 0.5rem;
}

a {
  color: #95c379;
  text-decoration: none;
}

iframe {
  max-width: var(--max-img-iframe-width-mobile);
  max-height: 51vw;
  width: 560px;
  height: 315px;
  padding-right: var(--margin);
}

figure {
  display: table;
  margin-bottom: 40px;
}

img {
  max-width: var(--max-img-iframe-width-mobile);
  padding-right: var(--margin);
}

figcaption {
  font-size: 0.85em;
  display: table-caption;
  caption-side: bottom;
  text-align: justify;
}

.design-fragments {
  max-width: 300px;
}

blockquote {
  border-left: 3px solid var(--text-color);
  padding-left: 10px;
}

table {
  background-color: #131516;
  margin-left: 15px;
  margin-right: 15px;
}

table > caption {
  text-align: left;
  margin-bottom: 10px;
  margin-left: 10px;
  font-size: 1.5rem;
  font-weight: bold;
}

td,
th {
  padding-top: 7.5px;
  padding-left: 7.5px;
  padding-right: 7.5px;
  padding-bottom: 7.5px;
}

tr:nth-child(even),
th {
  background-color: #1f2223;
}

kbd {
  color: rgb(189, 183, 174);
  border-color: rgb(101, 93, 83);
  background-color: rgb(10, 14, 18);
  box-shadow: rgb(90, 97, 101) 0px -1px 0px inset;
  border-radius: 6px;
  font: 0.85rem monospace;
  padding: 3px 5px;
  vertical-align: middle;
}

code {
  color: #c26f79;
}

pre {
  margin-left: 30px;
}

@media (min-width: 600px) {
  body {
    max-width: var(--max-content-width-desktop);
    width: var(--max-content-width-desktop);
  }

  img,
  iframe {
    max-width: var(--max-img-iframe-width-desktop);
  }

  .quote-author {
    padding-left: 200px;
  }
}

